# packages/web-core/openapi/spec_v2.yaml
@@ -105,6 +105,20 @@ paths:
               schema:
                 $ref: '#/components/schemas/initSignupRsp'
 
+  /v2/auth/skipBlock:
+    post:
+      description: tbd
+      operationId: SkipBlock
+      tags:
+        - Auth
+      responses:
+        '200':
+          description: tbd
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/blockBody'
+
   /v2/auth/passkey/append/start:
     post:
       description: tbd
